--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.34.7"
+    "react-query": "^3.34.7",
+    "use-debounce": "^7.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
