--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "production:clean": "rimraf out/"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "next": "^12.0.8",
