--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "production:clean": "rimraf out/"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.2",
     "@tailwindcss/forms": "^0.4.0",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
@@ -25,6 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.7",
+    "react-redux": "^7.2.6",
     "use-debounce": "^7.0.1"
   },
   "devDependencies": {
