--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "framer-motion": "^6.2.4",
     "next": "^12.0.8",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
