--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^6.2.4",
     "next": "^12.0.8",
     "nprogress": "^0.2.0",
+    "random-words": "^1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.7",
@@ -37,6 +38,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
     "@types/nprogress": "^0.2.0",
+    "@types/random-words": "^1.1.2",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-test-renderer": "^17.0.1",
