--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.5",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.0.13",
     "ts-jest": "^27.1.2",
